erDiagram
    nsr_species ||--o{ nsr_synonym : "has"
    nsr_species ||--o{ node : "has_taxonomy"
    nsr_species ||--o{ specimen : "identified_as"
    specimen ||--|{ barcode : "has"
    marker ||--|{ barcode : "used_for"
    
    nsr_species {
        integer id PK
        varchar canonical_name
        varchar occurrence_status
    }
    
    nsr_synonym {
        integer id PK
        varchar nsr_id
        varchar name
        varchar taxonomic_status
        integer node_id FK
        integer species_id FK
    }
    
    node {
        integer id PK
        varchar nsr_id
        integer parent
        integer left
        integer right
        varchar name
        float length
        float height
        varchar rank
        integer species_id FK
        varchar kingdom
        varchar phylum
        varchar class
        varchar order
        varchar family
        varchar genus
        varchar species
    }
    
    specimen {
        integer id PK
        varchar sampleid
        varchar catalognum
        varchar institution_storing
        varchar identification_provided_by
        varchar locality
        integer species_id FK
    }
    
    barcode {
        integer id PK
        integer specimen_id FK
        integer database
        integer marker_id FK
        varchar defline
        varchar external_id
    }
    
    marker {
        integer id PK
        varchar name
    }
